.github/scripts/tests/fixtures/ci-manifest-binding/pass/clean/.github/scripts/validate-foo.py
#!/usr/bin/env python3
"""Fixture stub — validate-foo.py. Referenced by TEST-ACTIVE-001 in
validators-manifest.yaml. The binding validator only checks file
existence + reference, not script content."""
