.github/scripts/tests/fixtures/ci-manifest-binding/fail/deprecated-non-empty/.github/scripts/validate-foo.py
#!/usr/bin/env python3
"""Fixture stub — referenced by the active manifest entry. The
defect this fixture tests is the deprecated entry's non-empty paths."""
